kubernetes/loki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: loki-stack
  labels:
    app: loki
spec:
  selector:
    app: loki
  ports:
  - name: http-metrics
    port: 3100
    targetPort: http-metrics
  - name: grpc
    port: 9095
    targetPort: grpc
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.2.136
  type: LoadBalancer
