kubernetes/loki/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki
  namespace: loki-stack
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`loki.tehmatt.com`) # TODO: change to your domain
    kind: Rule
    services:
    - name: loki
      port: 3100
      passHostHeader: false # set true if backend expects the original Host header
      # If your LAN backend is HTTPS, change the Service/Endpoints port to 443
      # and optionally reference a ServersTransport below to skip verify or set SNI
      # serversTransport: insecure-skipverify
    middlewares:
    - name: default-headers
      namespace: loki-stack
  tls:
    secretName: tehmatt-tls # TODO: change to your cert secret name
